// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smtp details create smtp details and test 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="smtp"
        >
          <svg
            height="56"
            viewBox="0 0 56 56"
            width="56"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#smtp_svg__clip0_425_33595)"
              fill="currentColor"
            >
              <path
                d="M5.25 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM21.875 15.75H38.5a.875.875 0 100-1.75H21.875a.875.875 0 100 1.75z"
              />
              <path
                d="M2.625 20.563h38.5a2.628 2.628 0 002.625-2.625v-6.125a2.628 2.628 0 00-2.625-2.626h-38.5A2.628 2.628 0 000 11.813v6.124a2.628 2.628 0 002.625 2.625zm-.875-8.75a.876.876 0 01.875-.876h38.5a.876.876 0 01.875.876v6.124a.876.876 0 01-.875.875h-38.5a.876.876 0 01-.875-.875v-6.125zM5.25 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM21.875 27.125a.875.875 0 100 1.75H38.5a.875.875 0 100-1.75H21.875zM5.25 42a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 42a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 42a.875.875 0 100-1.75.875.875 0 000 1.75zM46.558 17.9a6.108 6.108 0 013.66 2.97c.502.933.723 1.991.635 3.047a.871.871 0 00-1.034 1.28l1.197 1.948a.876.876 0 00.745.418h.003a.876.876 0 00.746-.422l1.176-1.942a.873.873 0 00-1.084-1.26c.091-1.35-.2-2.698-.838-3.89a7.844 7.844 0 00-4.697-3.824.875.875 0 00-.509 1.675z"
              />
              <path
                d="M2.625 45.063a.876.876 0 01-.875-.876v-6.124a.876.876 0 01.875-.876h24.5v-1.75h-24.5A2.628 2.628 0 000 38.063v6.124a2.628 2.628 0 002.625 2.626h25.352a4.19 4.19 0 01-.777-1.75H2.625zM2.625 33.688h24.5v-.104c0-.566.115-1.126.34-1.647H2.624a.876.876 0 01-.875-.875v-6.125a.876.876 0 01.875-.875h38.5a.876.876 0 01.875.875v4.375h1.75v-4.375a2.628 2.628 0 00-2.625-2.625h-38.5A2.628 2.628 0 000 24.938v6.125a2.628 2.628 0 002.625 2.625z"
              />
              <path
                d="M53.375 31.063H31.5a2.578 2.578 0 00-2.625 2.521V44.29a2.578 2.578 0 002.625 2.523h21.875A2.578 2.578 0 0056 44.29V33.585a2.578 2.578 0 00-2.625-2.522zm-4.582 8.826l-1.424 1.095 4.97 4.078H32.507l4.985-4.08-1.426-1.094-5.436 4.45c-.002-.016 0-10.803.003-10.828l10.546 8.093a2.198 2.198 0 002.48.022c.022-.014 10.579-8.138 10.579-8.138.005.033.005 10.85.003 10.874l-5.45-4.472zm-16.194-7.077h19.648l-9.552 7.352a.422.422 0 01-.48.03L32.6 32.811zM21 41.125a.875.875 0 00.875.875h5.25v-1.75h-5.25a.875.875 0 00-.875.875z"
              />
            </g>
            <defs>
              <clippath
                id="smtp_svg__clip0_425_33595"
              >
                <path
                  d="M0 0h56v56H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        common.smtp.conifg
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          common.smtp.testConnection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
          style="height: 570px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-variation-h3"
          >
            common.smtp.smtpConnectivity
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
          >
            common.smtp.modalSubHeading
          </p>
          <div
            class="StyledProps--font StyledProps--main smtpMdlContainer"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="to-0"
                >
                  <label
                    class="bp3-label"
                    for="to"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_to"
                    >
                      common.smtp.labelTo
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="to"
                        type="text"
                        value="test@test.com"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="subject-1"
                >
                  <label
                    class="bp3-label"
                    for="subject"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_subject"
                    >
                      common.smtp.labelSubject
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subject"
                        type="text"
                        value="common.smtp.preConfiguredSubject"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="body-2"
                >
                  <label
                    class="bp3-label"
                    for="body"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_body"
                    >
                      common.smtp.labelBody
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="body"
                        type="text"
                        value="common.smtp.preConfiguredBody"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-tertiary"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                      icon="chevron-left"
                    >
                      <svg
                        data-icon="chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-left
                        </desc>
                        <path
                          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      previous
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      continue
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`smtp details render smtp creation dialog 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="smtp"
        >
          <svg
            height="56"
            viewBox="0 0 56 56"
            width="56"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#smtp_svg__clip0_425_33595)"
              fill="currentColor"
            >
              <path
                d="M5.25 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 15.75a.875.875 0 100-1.75.875.875 0 000 1.75zM21.875 15.75H38.5a.875.875 0 100-1.75H21.875a.875.875 0 100 1.75z"
              />
              <path
                d="M2.625 20.563h38.5a2.628 2.628 0 002.625-2.625v-6.125a2.628 2.628 0 00-2.625-2.626h-38.5A2.628 2.628 0 000 11.813v6.124a2.628 2.628 0 002.625 2.625zm-.875-8.75a.876.876 0 01.875-.876h38.5a.876.876 0 01.875.876v6.124a.876.876 0 01-.875.875h-38.5a.876.876 0 01-.875-.875v-6.125zM5.25 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 28.875a.875.875 0 100-1.75.875.875 0 000 1.75zM21.875 27.125a.875.875 0 100 1.75H38.5a.875.875 0 100-1.75H21.875zM5.25 42a.875.875 0 100-1.75.875.875 0 000 1.75zM8.75 42a.875.875 0 100-1.75.875.875 0 000 1.75zM12.25 42a.875.875 0 100-1.75.875.875 0 000 1.75zM46.558 17.9a6.108 6.108 0 013.66 2.97c.502.933.723 1.991.635 3.047a.871.871 0 00-1.034 1.28l1.197 1.948a.876.876 0 00.745.418h.003a.876.876 0 00.746-.422l1.176-1.942a.873.873 0 00-1.084-1.26c.091-1.35-.2-2.698-.838-3.89a7.844 7.844 0 00-4.697-3.824.875.875 0 00-.509 1.675z"
              />
              <path
                d="M2.625 45.063a.876.876 0 01-.875-.876v-6.124a.876.876 0 01.875-.876h24.5v-1.75h-24.5A2.628 2.628 0 000 38.063v6.124a2.628 2.628 0 002.625 2.626h25.352a4.19 4.19 0 01-.777-1.75H2.625zM2.625 33.688h24.5v-.104c0-.566.115-1.126.34-1.647H2.624a.876.876 0 01-.875-.875v-6.125a.876.876 0 01.875-.875h38.5a.876.876 0 01.875.875v4.375h1.75v-4.375a2.628 2.628 0 00-2.625-2.625h-38.5A2.628 2.628 0 000 24.938v6.125a2.628 2.628 0 002.625 2.625z"
              />
              <path
                d="M53.375 31.063H31.5a2.578 2.578 0 00-2.625 2.521V44.29a2.578 2.578 0 002.625 2.523h21.875A2.578 2.578 0 0056 44.29V33.585a2.578 2.578 0 00-2.625-2.522zm-4.582 8.826l-1.424 1.095 4.97 4.078H32.507l4.985-4.08-1.426-1.094-5.436 4.45c-.002-.016 0-10.803.003-10.828l10.546 8.093a2.198 2.198 0 002.48.022c.022-.014 10.579-8.138 10.579-8.138.005.033.005 10.85.003 10.874l-5.45-4.472zm-16.194-7.077h19.648l-9.552 7.352a.422.422 0 01-.48.03L32.6 32.811zM21 41.125a.875.875 0 00.875.875h5.25v-1.75h-5.25a.875.875 0 00-.875.875z"
              />
            </g>
            <defs>
              <clippath
                id="smtp_svg__clip0_425_33595"
              >
                <path
                  d="M0 0h56v56H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        common.smtp.conifg
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          common.smtp.testConnection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
          style="height: 570px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-variation-h3"
          >
            details
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
          >
            common.smtp.modalSubHeading
          </p>
          <div
            class="StyledProps--font StyledProps--main smtpMdlContainer"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="host-1"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_host"
                    >
                      pipelineSteps.hostLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="port-2"
                >
                  <label
                    class="bp3-label"
                    for="port"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_port"
                    >
                      common.smtp.port
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="port"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="useSSL-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="useSSL"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="smtpStepDetailsForm_useSSL"
                      >
                        common.smtp.enableSSL
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="startTLS-4"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="startTLS"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="smtpStepDetailsForm_startTLS"
                      >
                        common.smtp.startTSL
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="fromAddress-5"
                >
                  <label
                    class="bp3-label"
                    for="fromAddress"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_fromAddress"
                    >
                      common.smtp.fromAddress
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="fromAddress"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main buttonPanel"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      continue
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
